--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,49 @@
+# Dependencies
 node_modules
+.pnp
+.pnp.js
+
+# Testing
+coverage
+
+# Production
 dist
+build
+
+# Misc
 .DS_Store
-server/public
-vite.config.ts.*
-*.tar.gz
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.example
+.cache
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.vscode
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
+
+# Replit-specific
+.replit
+replit.nix
+replit_zip_error_log.txt
+.config
+
+# Database
+*.sqlite
+*.sqlite3
